--- a/FlutterApp/e_bon/pubspec.yaml
+++ b/FlutterApp/e_bon/pubspec.yaml
@@ -30,17 +30,20 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+
   firebase_core: ^1.10.2
   firebase_auth: ^3.3.0
+  firebase_storage: ^8.0.3
   cloud_firestore: ^3.1.1
+
   qr_code_scanner: ^0.6.1
   provider: ^4.3.2+2
   dio: ^4.0.4
   permission_handler: ^8.3.0
+  charts_flutter: ^0.12.0
 
 dev_dependencies:
   flutter_test:
