finished stats page

--- a/FlutterApp/e_bon/pubspec.yaml
+++ b/FlutterApp/e_bon/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   dio: ^4.0.4
   permission_handler: ^8.3.0
   charts_flutter: ^0.12.0
+  pie_chart: ^5.1.0
 
 dev_dependencies:
   flutter_test:
